Fix editor slide figcaption wrap

--- a/src/style-guide.less
+++ b/src/style-guide.less
@@ -3344,7 +3344,7 @@ md-menu-item{
         .rel();
         display:flex;
         flex-direction:column;
-        flex-wrap:wrap;
+        flex-wrap:nowrap;
         width:167px;
         height: 132px;
         flex-shrink:0;
@@ -3355,6 +3355,7 @@ md-menu-item{
           display: flex;
           align-items: center;
           justify-content: center;
+          flex-grow: 1;
         }
 
         figcaption{
